FIX: Don't allow `<label>`s to wrap lines (#192)
closes #192

--- a/classes/label.css
+++ b/classes/label.css
@@ -2,4 +2,5 @@ label, .label {
   font-size:   smaller;
   font-weight: bold;
   padding:     var(--text-padding-sm);
+  white-space: nowrap;
 }
